--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.0.1
-numpy>=1.22.0
-scikit-learn==0.24.2
-joblib==1.0.1
-gunicorn==21.2.0
+Flask==2.3.2              # Modern Flask (works with Py3.11+)
+Werkzeug==2.3.7           # Required for Flask 2.3.x
+numpy==1.24.4             # Stable version for scikit-learn
+scikit-learn==1.3.0       # Modern sklearn (supports Py3.11)
+joblib==1.3.2             # Compatible with sklearn 1.3.x
+gunicorn==21.2.0          # Production server
