--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ numpy==1.24.4             # Stable version for scikit-learn
 scikit-learn==1.3.0       # Modern sklearn (supports Py3.11)
 joblib==1.3.2             # Compatible with sklearn 1.3.x
 gunicorn==21.2.0          # Production server
+pandas==2.0.3 
