--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.3.2              # Modern Flask (works with Py3.11+)
-Werkzeug==2.3.7           # Required for Flask 2.3.x
-numpy==1.24.4             # Stable version for scikit-learn
-scikit-learn==1.3.0       # Modern sklearn (supports Py3.11)
-joblib==1.3.2             # Compatible with sklearn 1.3.x
-gunicorn==21.2.0          # Production server
-pandas==2.0.3 
+flask==2.0.1
+scikit-learn==1.0.2
+pandas==1.3.4
+numpy==1.21.2
+joblib==1.0.1
+gunicorn==20.1.0
