--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask==2.0.3
-scikit-learn==1.0.2
-pandas==1.3.5
-numpy==1.21.6
+flask==2.1.3
+scikit-learn==1.1.3
+pandas==1.5.3
+numpy==1.23.5
 gunicorn==20.1.0
+joblib==1.2.0
