--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.2
-pandas==2.1.4
-scikit-learn==1.4.1.post1
-numpy==1.26.4
-gunicorn==21.2.0
+flask==2.0.1
+pandas==1.3.3
+scikit-learn==0.24.2
+numpy==1.21.2
+gunicorn==20.1.0
