--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==3.0.2
-pandas==1.3.3
-numpy==1.26.4 
+flask==2.3.2  # More stable with older numpy
+pandas==1.5.3  # Compatible bridge version
+numpy==1.24.0  # Most stable wheel-based version
 gunicorn==20.1.0
-scikit-learn==1.4.0
+scikit-learn==1.2.2  # Matches numpy 1.24
