--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.23.5  # Most stable version that avoids _core issues
-scikit-learn==1.1.3  # Compatible with numpy 1.23
-pandas==1.5.0
-flask==2.2.5
-gunicorn==20.1.0
+numpy==2.0.2
+scikit-learn==1.6.1
+pandas==2.2.1
+flask==3.0.2
+gunicorn==21.2.0
