--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.1.3
-Werkzeug==2.1.2
-pandas==1.5.3  # Specific version compatible with numpy 2.0.2
+Flask==2.0.3
+Werkzeug==2.0.3
+pandas==1.3.5
 numpy==2.0.2
 scikit-learn==1.6.1
 gunicorn==20.1.0
