--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.3
 Werkzeug==2.0.3
 pandas==1.3.5
-numpy==2.0.2
-scikit-learn==1.6.1
+numpy==1.21.6  # Specifically tested with pandas 1.3.5
+scikit-learn==1.0.2  # Compatible with numpy 1.21.6
 gunicorn==20.1.0
