--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.1
-pandas==2.0.3
-numpy==1.26.0  # Critical change - stable version that works with both pandas and scikit-learn
-scikit-learn==1.6.1  # Matches your original model version
+pandas==1.5.3
+numpy==1.24.3
+scikit-learn==1.2.2
 gunicorn==20.1.0
 Werkzeug==2.0.3
